--- a/index.html
+++ b/index.html
@@ -15,102 +15,47 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Minimal</h1>
-        <p>A Theme for GitHub Pages</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+        <h1>Reza Fahlavi</h1>
+        <p>DevOps</p>
+        <p class="view"><a href="https://linkedin.com/in/rezafahlavi/">My linkedin profile <small>Let's talk</small></a></p>
         <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
+          <li><a href="mailto:rezafahlavi73@gmail.com">Contact me <strong>Gmail</strong></a></li>
+          <li><a href="www.instagram.com/reza_vee">Let's be friend <strong>instagram</strong></a></li>
+          <li><a href="http://github.com/rezafahlavi">My project <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
-        <h1>GitHub Flavored Markdown</h1>
+        <h1>Latest Work</h1>
 
-        <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
+        <p><em>View the <a href="https://github.com/rezafahlavi/rezafahlavi.github.io">source of this content</a>.</em></p>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
+        <p>I have experience in a number of different areas. Have a look at what I'm working on right now.</p>
 
-        <p>Roses are red<br>
-        Violets are blue</p>
+        <h2>IT Cloud Infrastructure & Technical Support at <a href="https://www.bobobobo.com">Bobobobo.com</a></h2>
 
-        <p>The next paragraph has the same phrases, but now they are separated by two spaces and a newline character:</p>
-
-        <p>Roses are red<br><br>
-        Violets are blue</p>
-
-        <p>Oh, and one thing I cannot stand is the mangling of words with multiple underscores in them like perform_complicated_task or do_this_and_do_that_and_another_thing.</p>
-
-        <h2>A bit of the GitHub spice</h2>
-
-        <p>In addition to the changes in the previous section, certain references are auto-linked:</p>
+        <p>Roles:</p>
 
         <ul>
-          <li>SHA: be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2</li>
-          <li>User@SHA ref: <a href="https://github.com/mojombo/product/commit/be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2" class="commit-link">mojombo@<tt>be6a8cc</tt></a></li>
-          <li>User/Project@SHA: <a href="https://github.com/mojombo/god/commit/be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2" class="commit-link">mojombo/god@<tt>be6a8cc</tt></a></li>
-          <li>#Num: <a href="https://github.com/github/product/issues/1" class="issue-link" title="Baseline: What is up in the air right now?">#1</a></li>
-          <li>User/#Num: mojombo#1</li>
-          <li>User/Project#Num: <a href="https://github.com/mojombo/god/issues/1" class="issue-link" title="The server is not available (or you do not have permissions to access it)">mojombo/god#1</a></li>
+          <li>Build and Maintain CI/CD Pipeline on AWS.</li>
+          <li>Maintain AWS & GCP services as Administrator.</li>
+          <li>Implement and improve monitoring and alerting.</li>
+          <li>Resolve technical problems with Local Area Networks (LAN), Wide Area Networks (WAN), and other systems.</li>
+          <li>Install, modify, and repair computer hardware and software.</li>
         </ul>
 
-        <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
+        <h2>Technician at PT Baja Indo Perkasa</h2>
 
-        <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p>
-
-        <h2>Math is hard, let's go shopping</h2>
-
-        <p>In first grade I learned that 5 &gt; 3 and 2 &lt; 7. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
-
-        <p>Triangles man! a^2 + b^2 = c^2</p>
-
-        <h2>We all like making lists</h2>
-
-        <p>The above header should be an H2 tag. Now, for a list of fruits:</p>
+        <p>Roles:</p>
 
         <ul>
-          <li>Red Apples</li>
-          <li>Purple Grapes</li>
-          <li>Green Kiwifruits</li>
+          <li>Procurement and maintenance of production machinery.</li>
+          <li>PT Baja Indo Perkasa Technical Support.</li>
+          <li>Install, modify, and repair computer hardware and software.</li>
         </ul>
 
-        <p>Let's get crazy:</p>
-
-        <ol>
-          <li>
-            <p>This is a list item with two paragraphs. Lorem ipsum dolor<br>
-            sit amet, consectetuer adipiscing elit. Aliquam hendrerit<br>
-            mi posuere lectus.</p>
-
-            <p>Vestibulum enim wisi, viverra nec, fringilla in, laoreet<br>
-            vitae, risus. Donec sit amet nisl. Aliquam semper ipsum<br>
-            sit amet velit.</p>
-          </li>
-          <li><p>Suspendisse id sem consectetuer libero luctus adipiscing.</p></li>
-        </ol>
-
-        <p>What about some code <strong>in</strong> a list? That's insane, right?</p>
-
-        <ol>
-          <li>
-            <p>In Ruby you can map like this:</p>
-
-            <pre><code>['a', 'b'].map { |x| x.uppercase }</code></pre>
-          </li>
-          <li>
-            <p>In Rails, you can do a shortcut:</p>
-
-            <pre><code>['a', 'b'].map(&amp;:uppercase)</code></pre>
-          </li>
-        </ol>
-
-        <p>Some people seem to like definition lists</p>
-
-        <dl>
-          <dt>Lower cost</dt>
-          <dd>The new version of this product costs significantly less than the previous one!</dd>
-          <dt>Easier to use</dt>
-          <dd>We've changed the product so that it's much easier to use!</dd>
+          <dt>Project at PT Baja Indo Pekasa</dt>
+          <dd>Create inventory and sales management applications</dd>
+          <dd>Create a delivery note automation system at every sale</dd>
         </dl>
 
         <h2>I am a robot</h2>
