one more little changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="view"><a href="https://linkedin.com/in/rezafahlavi/">My linkedin profile <small>Let's talk</small></a></p>
         <ul>
           <li><a href="mailto:rezafahlavi73@gmail.com">Contact me <strong>Gmail</strong></a></li>
-          <li><a href="www.instagram.com/reza_vee">Let's be friend <strong>instagram</strong></a></li>
+          <li><a href="http://instagram.com/reza_vee">Let's be friend <strong>instagram</strong></a></li>
           <li><a href="http://github.com/rezafahlavi">My project <strong>GitHub</strong></a></li>
         </ul>
       </header>
@@ -56,9 +56,7 @@
           <dd>Create a delivery note automation system in every sale</dd>
         </dl>
 
-        <p>My other project</p>
-
-        <p>Maybe you want to print <code>robot</code> to the console 1000 times. Why not?</p>
+        <h2>My other project</h2>
 
         <dt>Project at PT Prima Karya Berjaya</dt>
         <dd>Help Create a cooperative loan application</dd>
