--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     <div class="wrapper">
       <header>
         <h1>Reza Fahlavi</h1>
+
+        <p>
+          <img src = "profile.png"
+               alt = "rezafahlavi picture" />
+        </p>
+
         <p>DevOps</p>
         <p class="view"><a href="https://linkedin.com/in/rezafahlavi/">My linkedin profile <small>Let's talk</small></a></p>
         <ul>
@@ -76,9 +82,9 @@
 
         <h2>My Project</h2>
 
-          <dt>Project at PT Baja Indo Pekasa</dt>
+          <dt><a href="https://github.com/rezafahlavi/PT_Baja_Indo_Perkasa">PT Baja Indo Pekasa inventory, sales management and delivery note automation</a></dt>
           <dd>Create inventory and sales management applications</dd>
-          <dd>Create a delivery note automation system in every sale</dd>
+          <dd>Make a delivery note automation system in every sale</dd>
 
         <dt>Project at PT Prima Karya Berjaya</dt>
         <dd>Help Create a cooperative loan application</dd>
