--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1>Reza Fahlavi</h1>
 
         <p>
-          <img src = "profile.png"
+          <img src = "src/profile.png"
                alt = "rezafahlavi picture" />
         </p>
 
