--- a/index.html
+++ b/index.html
@@ -83,11 +83,16 @@
         <h2>My Project</h2>
 
           <dt><a href="https://github.com/rezafahlavi/PT_Baja_Indo_Perkasa">PT Baja Indo Pekasa inventory, sales management and delivery note automation</a></dt>
-          <dd>Create inventory and sales management applications</dd>
-          <dd>Make a delivery note automation system in every sale</dd>
+          <ul>
+          <li>Create inventory and sales management applications</li>
+          <li>Make a delivery note automation system in every sale</li>
+          </ul>>
 
         <dt>Project at PT Prima Karya Berjaya</dt>
-        <dd>Help Create a cooperative loan application</dd>
+        
+        <ul>
+        <li>Help Create a cooperative loan application</li>>
+        </ul>>
 
         <h2>Skills</h2>
 
