--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
           <ul>
           <li>Create inventory and sales management applications</li>
           <li>Make a delivery note automation system in every sale</li>
-          </ul>>
+          </ul>
 
         <dt>Project at PT Prima Karya Berjaya</dt>
         
         <ul>
-        <li>Help Create a cooperative loan application</li>>
-        </ul>>
+        <li>Help Create a cooperative loan application</li>
+        </ul>
 
         <h2>Skills</h2>
 
