--- a/index.html
+++ b/index.html
@@ -85,7 +85,15 @@
           <dt><a href="https://github.com/rezafahlavi/PT_Baja_Indo_Perkasa">PT Baja Indo Pekasa inventory, sales management and delivery note automation</a></dt>
           <ul>
           <li>Create inventory and sales management applications</li>
+          <p>
+            <img src = "src/menu.png"
+                 alt = "main menu" />
+          </p>
           <li>Make a delivery note automation system in every sale</li>
+          <p>
+            <img src = "src/surat_jalan.png"
+                 alt = "delivery note" />
+          </p>
           </ul>
 
         <dt>Project at PT Prima Karya Berjaya</dt>
