--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <ul>
           <li>Create inventory and sales management applications</li>
           <p>
-            <img src = "src/menu_utama.png"
+            <img src = "src/menu.png"
                  alt = "main menu" />
           </p>
           <li>Make a delivery note automation system in every sale</li>
