--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       </section>
       <footer>
-        <p><a href="http://github.com/rezafahlavi">© 2020 Reza Fahlavi</a></p>
+        <p><a href="https://rezafahlavi.github.io">© 2020 Reza Fahlavi</a></p>
         <p><small>Powered by <a href="https://github.com">Github</a></small></p>
       </footer>
     </div>
